--- a/navbar/index.html
+++ b/navbar/index.html
@@ -6,7 +6,9 @@
     <title>Navbar</title>
     <!--Stylesheets-->
     <link rel="stylesheet" href="css/index.css">
+     <link rel="stylesheet" href="css/media.css">
     <!--Fonts-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
   
 </head>
 
@@ -18,9 +20,19 @@
            <div class= "main navcontent feature ">Feature</div>
            <div class= "main navcontent pricing">Pricing </div>
            <div class= "main navcontent about">About</div>
-           <div class="main searchbox " ><input class ="search" id="search" type="search" value="search" ></div>
-           <div class= "main searchbutton "> <span class="">Search</span></div> 
+           <div class="downbar"><i  id="downbar"class="fas fa-align-justify"></i></div>
+           <div class="downbar2"><i  id="downbar2"class="fas fa-align-justify"></i></div>
+           <div class="downbarcontent">
+           	  <div class= " down navcontent home">Home</div>
+           	  <div class= "down navcontent  feature">Feature</div>
+              <div class= "down navcontent pricing"> Pricing</div>
+              <div class= "down navcontent about">About</div>
+           </div>
+           <div class="main m searchbox " ><input class ="search" id="search" type="search" value="search" ></div>
+           <div class= "main  m searchbutton "> <span class="">Search</span></div> 
+
     </div>
+    
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/index.js"></script>
 </body>
